# The-Forge

./: .gitignore
Common_3/OS/Core/: CPUConfig.cpp  Config.h  TextureContainers.h
Common_3/OS/FileSystem/: SystemRun.cpp  UnixFileSystem.cpp
Common_3/OS/Input/: InputSystem.cpp
Common_3/OS/Interfaces/: IApp.h  IFileSystem.h  IOperatingSystem.h
Common_3/OS/Logging/: Log.c
Common_3/OS/OHOS/: OHOSBase.cpp  OHOSFileSystem.cpp  OHOSLog.c  OHOSThread.c  OHOSWindow.cpp
Common_3/OS/Windows/: WindowsFileSystem.cpp  WindowsThread.c
Common_3/Renderer/: IRenderer.h  IResourceLoader.h  Renderer.cpp  RendererConfig.h  ResourceLoader.cpp
Common_3/Renderer/Direct3D11/: Direct3D11.cpp
Common_3/Renderer/Direct3D12/: Direct3D12.cpp  Direct3D12CapBuilder.h
Common_3/Renderer/Metal/: MetalAvailabilityMacros.h  MetalRenderer.mm  MetalShaderReflection.mm
Common_3/Renderer/OpenGLES/: GLES.cpp
Common_3/Renderer/Vulkan/: Vulkan.cpp  VulkanCapsBuilder.h  VulkanConfig.h
Common_3/Tools/AssetPipeline/Win64/: AssetPipelineCmd.vcxproj
Common_3/Tools/FileSystem/: WindowsToolsFileSystem.cpp
Common_3/Tools/ForgeShadingLanguage/: fsl.py  utils.py
Common_3/Tools/ForgeShadingLanguage/generators/: d3d.py  gles.py  metal.py  vulkan.py
Common_3/Tools/ForgeShadingLanguage/includes/: d3d.h  metal.h  vulkan.h
Examples_3/Unit_Tests/Android_VisualStudio2017/: Android-arm64-v8a.props
Examples_3/Unit_Tests/Android_VisualStudio2017/01_Transformations/: 01_Transformations.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2017/Libraries/OS/: OS.vcxproj  OS.vcxproj.filters
Examples_3/Unit_Tests/OHOS_Eco/: build-profile.json5  oh-package.json5
Examples_3/Unit_Tests/OHOS_Eco/AppScope/: app.json5
Examples_3/Unit_Tests/OHOS_Eco/AppScope/resources/base/element/: string.json
Examples_3/Unit_Tests/OHOS_Eco/entry/: build-profile.json5
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/: module.json5
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/cpp/: CMakeLists.txt  module.cpp
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/cpp/01_Transformations/: CMakeLists.txt
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/cpp/Libraries/OS/: CMakeLists.txt
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/cpp/Libraries/Renderer/: CMakeLists.txt
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/cpp/Libraries/Tools/SpirvTools/: CMakeLists.txt
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/cpp/types/libentry/: index.d.ts
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/ets/entryability/: EntryAbility.ets
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/ets/pages/: Index.ets
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/resources/en_US/element/: string.json
Examples_3/Unit_Tests/OHOS_Eco/entry/src/main/resources/zh_CN/element/: string.json
Examples_3/Unit_Tests/OHOS_Eco/entry/src/ohosTest/: module.json5
Examples_3/Unit_Tests/PC Visual Studio 2017/: 01_Transformations.vcxproj  02_Compute.vcxproj  03_MultiThread.vcxproj  04_ExecuteIndirect.vcxproj  05_FontRendering.vcxproj  06_MaterialPlayground.vcxproj  07_Tessellation.vcxproj  08_GltfViewer.vcxproj  09_LightShadowPlayground.vcxproj  09a_HybridRaytracing.vcxproj  10_ScreenSpaceReflections.vcxproj  11_LinkedMultiGPU.vcxproj  11a_UnlinkedMultiGPU.vcxproj  12_ZipFileSystem.vcxproj  13_UserInterface.vcxproj  14_WaveIntrinsics.vcxproj  15_Transparency.vcxproj  15a_VisibilityBufferOIT.vcxproj  16_Raytracing.vcxproj  16a_SphereTracing.vcxproj  17_EntityComponentSystem.vcxproj  18_VirtualTexture.vcxproj  19_CodeHotReload_Main.vcxproj  19a_CodeHotReload_Game.vcxproj  21_Playback.vcxproj  22_Blending.vcxproj  23_JointAttachment.vcxproj  24_PartialBlending.vcxproj  25_AdditiveBlending.vcxproj  26_BakedPhysics.vcxproj  27_MultiThread.vcxproj  28_Skinning.vcxproj  29_InverseKinematic.vcxproj  32_Window.vcxproj  33_YUV.vcxproj  34_Input.vcxproj  35_VariableRateShading.vcxproj  37_PrecomputedVolumeDLUT.vcxproj
Examples_3/Unit_Tests/PC Visual Studio 2017/Libraries/OS/: OS.vcxproj  OS.vcxproj.filters
Examples_3/Unit_Tests/PC Visual Studio 2017/Libraries/Renderer/: Renderer.vcxproj
Examples_3/Unit_Tests/PC Visual Studio 2017/Libraries/Tools/: SpirvCross.vcxproj
Examples_3/Unit_Tests/UbuntuCodelite/OSBase/: OSBase.project
Examples_3/Unit_Tests/UbuntuCodelite/Renderer/: Renderer.project
Examples_3/Unit_Tests/UbuntuCodelite/SpirVTools/: SpirVTools.project
Examples_3/Unit_Tests/macOS Xcode/The-Forge/The-Forge.xcodeproj/: project.pbxproj
Examples_3/Unit_Tests/src/01_Transformations/: 01_Transformations.cpp
